--- a/axProjects/MidiSequencer/builds/MidiSequencer/MidiSequencer.vcxproj.filters
+++ b/axProjects/MidiSequencer/builds/MidiSequencer/MidiSequencer.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="..\..\axAudioFilter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\axAudioEnvelope.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\AudioWaveform.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\axAudioFilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\axAudioEnvelope.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
