--- a/axProjects/MidiSequencer/builds/MidiSequencer/MidiSequencer.vcxproj.filters
+++ b/axProjects/MidiSequencer/builds/MidiSequencer/MidiSequencer.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClCompile Include="..\..\axAudioEnvelope.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\axVstInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\libs\VST3 SDK\public.sdk\source\vst2.x\audioeffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\libs\VST3 SDK\public.sdk\source\vst2.x\audioeffectx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\AudioWaveform.h">
@@ -69,6 +78,27 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\axAudioEnvelope.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\axVstInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\libs\VST3 SDK\pluginterfaces\vst2.x\aeffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\libs\VST3 SDK\pluginterfaces\vst2.x\aeffectx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\libs\VST3 SDK\pluginterfaces\vst2.x\vstfxstore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\libs\VST3 SDK\public.sdk\source\vst2.x\aeffeditor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\libs\VST3 SDK\public.sdk\source\vst2.x\audioeffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\libs\VST3 SDK\public.sdk\source\vst2.x\audioeffectx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
