--- a/builds/VisualStudio2013/axGL/axGL.vcxproj.filters
+++ b/builds/VisualStudio2013/axGL/axGL.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="..\..\..\axWidgets\axDropMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\axMath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\axApp.h">
@@ -177,6 +180,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\axWidgets\axDropMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\axMath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
