--- a/builds/VisualStudio2013/axGL/axGL.vcxproj
+++ b/builds/VisualStudio2013/axGL/axGL.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="..\..\..\axGC.cpp" />
     <ClCompile Include="..\..\..\axImage.cpp" />
     <ClCompile Include="..\..\..\axManager.cpp" />
+    <ClCompile Include="..\..\..\axMath.cpp" />
     <ClCompile Include="..\..\..\axObject.cpp" />
     <ClCompile Include="..\..\..\axPanel.cpp" />
     <ClCompile Include="..\..\..\axUtils.cpp" />
@@ -61,6 +62,7 @@
     <ClInclude Include="..\..\..\include\axImage.h" />
     <ClInclude Include="..\..\..\include\axLib.h" />
     <ClInclude Include="..\..\..\include\axManager.h" />
+    <ClInclude Include="..\..\..\include\axMath.h" />
     <ClInclude Include="..\..\..\include\axObject.h" />
     <ClInclude Include="..\..\..\include\axPanel.h" />
     <ClInclude Include="..\..\..\include\axUtils.h" />
